# Trash-Delivery-Qbot

./: README.md
install/lidar_follower/lib/lidar_follower/: fake_scan.py  follower_lidar
install/lidar_follower/share/lidar_follower/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_pubsub/lib/py_pubsub/: num_talker  square
install/qbot_actuator_py/lib/qbot_actuator_py/: actuator_node
install/qbot_actuator_py/share/qbot_actuator_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/teleop/share/teleop/: package.sh
log/: latest_build
qbot_actuator_py/qbot_actuator_py/: actuator_node.py
qbot_actuator_py/qbot_actuator_py/install/: setup.sh
qbot_platform/launch/: qbot_platform_black_roundtrip_v5_launch.py  qbot_platform_blue_roundtrip_v5_launch.py
qbot_platform/scripts/: roundtrip_to_target_node.py
src/install/teleop/share/teleop/: package.dsv  (+2 more)
src/lidar_follower/: CMakeLists.txt
src/lidar_follower/scripts/: fake_scan.py
src/lidar_follower/src/: follower_lidar.cpp
src/log/: latest_build
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: subscriber_member_function.py
src/py_teleop/launch/: qbot_platform_manual_drive_launch.py
src/py_teleop/src/: command.cpp  qbot_platform_driver_interface.cpp
src/qbot_actuator_py/: setup.cfg  setup.py
src/qbot_actuator_py/qbot_actuator_py/install/: local_setup.sh
src/teleop/: CMakeLists.txt
src/teleop/launch/: qbot_platform_manual_drive_launch.py
src/teleop/src/: command.cpp  qbot_platform_driver_interface.cpp
(+3 files in other folders)
